# UQveraiphy

./: .gitignore  LICENSE  README.md  activation.py  bnn.py  bnn_toy.ipynb  conformal_toy.ipynb  dataset.py  gp_toy.ipynb  gpytorch_toy.ipynb  losses.py  main.py  plotting.py  pyproject.toml  repulsive_toy.ipynb  requirements.txt  train.py  utils.py  vblinear.py
bvm_example/: chapter3_bvm.ipynb  chapter4_bvm.ipynb
classification/: README.md  benchmark.py  jax_classify.ipynb
classification/utils/: config.py  data.py  diagnostics.py  kernel.py  models.py  plot.py  train.py  utils.py
regression/: README.md  activation.py  bnn_toy.ipynb  conformal_toy.ipynb  dataset.py  gp_toy.ipynb  layers.py  plots.ipynb  plotting.py  repulsive_toy.ipynb
