[project]
name = "uqveraiphy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpytorch>=1.14",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.0.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
