[project]
name = "uqveraiphy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "blackjax>=1.3",
    "distrax>=0.1.7",
    "equinox>=0.13.2",
    "gpytorch>=1.14",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jax>=0.8.1",
    "jaxtyping>=0.3.2",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "optax>=0.2.6",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.0.2",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
